<resources>
    <string name="app_name">EasyFund</string>
    <string name="donations_text">Donations</string>
    <string name="received">Received</string>
    <string name="target_text">Target</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account, </string>
    <string name="login">login</string>
    <string name="don_t_have_an_account">Don\'t have an account,</string>
    <string name="sign_up_lower">sign up</string>
    <string name="_0">0</string>
    <string name="_0_of_0">0% of 0</string>
    <string name="title_activity_dash">dash</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_event">Event</string>
    <string name="logout">Logout</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="custodian">Custodian</string>
    <string name="target_amount">Target amount</string>
    <string name="paybill_number">PayBill Number</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="share">Share</string>
    <string name="phone_number">Phone number</string>
</resources>