<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_gravity="center">

    <ListView
        android:id="@+id/event_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:divider="@android:color/transparent"
        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10sp"
            android:hint="@string/name"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10sp"
            android:hint="@string/description"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_pay_bill"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10sp"
            android:hint="@string/phone_number"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_target"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10sp"
            android:hint="@string/target_amount"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_custodian"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10sp"
            android:hint="@string/custodian"/>

        <Button
            android:id="@+id/create_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create"/>

      </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

  </LinearLayout>

</com.google.android.material.card.MaterialCardView>