<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/regCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:layout_gravity="center"
            app:cardCornerRadius="10sp"
            android:elevation="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtSignEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textSize="24sp"
                    android:layout_margin="15sp"
                    android:shadowRadius="0.5"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textSize="24sp"
                    android:layout_margin="15sp"
                    android:shadowRadius="0.5"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:layout_margin="15sp"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/alreadyHaveAnAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="20sp"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtToSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/already_have_an_account"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btnToLogin"
                android:layout_width="48sp"
                android:layout_height="48sp"
                android:gravity="center"
                android:clickable="true"
                android:textColor="#D7C8FF"
                android:focusable="true"
                android:textSize="16sp"
                android:text="@string/login"/>

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>