<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/amountCardView"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:layout_margin="5sp"
        app:cardCornerRadius="16sp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120sp"
                android:orientation="horizontal"
                android:layout_margin="10sp"
                android:layout_gravity="center"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="15sp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/txtCurrentAmt"
                        android:textSize="20sp"
                        android:text="@string/received" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtCurrentAmt"
                        android:layout_width="120sp"
                        android:layout_height="wrap_content"
                        android:elevation="5sp"
                        android:text="@string/_0"
                        android:textSize="30sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/txtTargetAmt"
                        android:textSize="20sp"
                        android:text="@string/target_text" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtTargetAmt"
                        android:layout_width="120sp"
                        android:layout_height="wrap_content"
                        android:elevation="5sp"
                        android:text="@string/_0"
                        android:textSize="30sp"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="10sp">

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_margin="15sp"
                    android:layout_height="0sp"
                    app:indicatorColor="@color/purple_700"
                    app:trackCornerRadius="20sp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtProgress"
                    android:layout_width="240sp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="24sp"/>

            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/dntCardView"
        android:layout_margin="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5sp"
        app:layout_constraintTop_toBottomOf="@+id/amountCardView"
        android:orientation="vertical"
        app:cardCornerRadius="16sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dntTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="10sp"
                android:text="@string/donations_text"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dntRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="100dp"
                android:layout_margin="10sp"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>